--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+  <title>Great Idea! - Services</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/services.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
-<body class="services">
+<body>
 
   <header>
     <nav>
@@ -26,81 +26,92 @@
       <a href="#">Contact</a>
     </nav>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
   </header>
 
   <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 
   <section class="top-section">
-  <h2>Services</h2>
+    <h1>Services</h1>
 
-  <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+    <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
   </section>
 
   <section class="gallery">
-    <h3>Digital Design</h3>
+    <div>
+      <h3>Digital Design</h3>
 
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
 
-    <button>Learn More</button>
+      <button>Learn More</button>
+    </div>
 
+    <div>
+      <h3>UX / UI</h3>
 
-    <h3>UX / UI</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
 
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
+      <button>Learn More</button>
+    </div>
 
-    <button>Learn More</button>
+    <div>
+      <h3>Digital Marketing</h3>
 
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+  
+      <button>Learn More</button>
+    </div>
+    
+    <div>
+      <h3>Web Development</h3>
 
-    <h3>Digital Marketing</h3>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
 
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
+      <button>Learn More</button>
+    </div>
 
-    <button>Learn More</button>
+    <div>
+      <h3>iOS Development</h3>
 
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
+  
+      <button>Learn More</button>
+    </div>
 
-    <h3>Web Development</h3>
+    <div>
+      <h3>Android Development</h3>
 
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
+      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
 
-    <button>Learn More</button>
+      <button>Learn More</button>
+    </div>
 
-
-    <h3>iOS Development</h3>
-
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-
-    <button>Learn More</button>
-
-
-    <h3>Android Development</h3>
-
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
-
-    <button>Learn More</button>
   </section>
 
   <footer>
-    <h3>Some Facts About Our Services></h3>
+    <div class="footer">
+      <div class="left">
+        <h3>Some Facts About Our Services</h3>
 
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.</p>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
 
-    <ul>
-      <li>Awesome thing</li>
-      <li>Amazing thing</li>
-      <li>Cool thing</li>
-      <li>Great thing</li>
-    </ul>
+        <ul>
+          <li>Awesome thing</li>
+          <li>Amazing thing</li>
+          <li>Cool thing</li>
+          <li>Great thing</li>
+        </ul>
+      </div>
 
-    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
+      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+    </div>
   
     <span>Copyright Great Idea! 2018</span>
   </footer>
